<resources>
    <string name="app_name">GetSchoolInfo</string>
    <string name="appwidget_text">Error</string>
    <string name="add_widget">AppWidget</string>
    <string name="mainBtn">Switch</string>
    <string name="accountLabel">Account:</string>
    <string name="passwordLabel">Password:</string>
    <string name="accountHint">Please input account.</string>
    <string name="passwordHint">Please input password.</string>
    <string name="loginBtn">Save config</string>
    <string name="deleteSuccess">Delete Success</string>
    <string name="deleteFailed">Delete Failed</string>
    <string name="chooseColor">Choose A Color</string>
    <string name="cancelChooseColor">Cancel</string>
    <string name="gradePage">Grade</string>
    <string name="examPage">Exam</string>
    <string name="newsPage">News</string>
    <string name="bathPage">Bathroom</string>
    <string name="canteenPage">Canteen</string>
    <string name="appConfig">App Default</string>
    <string name="widgetConfig">Widget Default</string>
    <string name="widgetBackgroundColor">Choose Widget Background Color</string>
    <string name="widgetTextColor">Choose Widget Text Color</string>
    <string name="SemesterChoose">Choose Wanted Semester</string>
    <string name="config_switchBtn">Notice On Going</string>
    <string name="settings">Settings</string>
    <string name="helps">Helps</string>
    <string name="deletes">Deletes</string>
</resources>
